update record request
